Add new property in ze_coins_save_type on zombie_escape.cfg

--- a/addons/amxmodx/configs/zombie_escape.cfg
+++ b/addons/amxmodx/configs/zombie_escape.cfg
@@ -139,7 +139,7 @@ ze_releasetime_blue 0			// Release Time Blue Color.
 ze_deathmsg_skull 0				// Color of skull in death message (0 = Yellow || 1 = Green)
 
 // Escape Coins system
-ze_coins_save_type 0	   // Where to save? (0 = nVault | 1 = MySQL)
+ze_coins_save_type 0	   // Where to save? (0 = nVault | 1 = MySQL | 2 = No Save)
 ze_escape_success_coins 15 // Coins Alive humans earn on Escape Success
 ze_human_infected_coins 5  // Coins Zombie Earn when infect humans
 ze_damage_coins 2          // Coins human take when he make X damage to zombies
